--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 /* css page */
 *{
-  margin: 0;
+  margin: 0px;
 }
 
 /* first section -> blue and white surface */
@@ -597,8 +597,8 @@
   color: rgba(255, 255, 255, 0.76);
   height: 30px;
   padding-top: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
 
  
 }
