--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
   justify-content: space-between;
   text-transform: capitalize;
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  width: 110%;
+  width: 100%;
   height: 60px;
 }
 /* css blue background */
@@ -22,9 +22,11 @@
   padding-top: 15px;
   font-size: larger;
   position: relative;
-  left: -10px;
+  left: -10%;
   transform: skew(+14deg);
   font-style: oblique;
+  }
+  .blank-surf {
   }
 
 .sec-zero button{
@@ -58,7 +60,7 @@
  .sec-one{
   background-color: #111;
   height: 480px;
-  width: 110%;
+  width: 100%;
   text-align: center;
  }
 
@@ -93,8 +95,8 @@
 
  .sec-two, .sec-three{
   background-color: rgb(26, 8, 44);
-  padding: 0px 15px;
-  width: 105%;
+  /* padding-left: 5px; */
+  width: 100%;
   
  }
  .sec-two h5{
