95% done with mobile

--- a/index.css
+++ b/index.css
@@ -958,7 +958,7 @@ img {
 .teen-omega {
   color: #ffffff;
   padding-left: 5%;
-  padding-right: 5px;
+  padding-right: 5%;
   
 }
 .teen-omega h3{
